chore(workflow): 更新CI工作流配置
- 将工作流名称从"Node.js CI"更改为"检查项目是否正常构建"
- 移除pull_request的branches配置
- 为各个步骤添加中文描述名称
- 简化依赖安装方式，从pnpm切换到npm ci
- 移除缓存配置和全局pnpm安装步骤

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,28 +1,22 @@
-name: Node.js CI
+name: 检查项目是否正常构建
 
 on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: 检出仓库代码
+        uses: actions/checkout@v4
+      - name: 安装 Node.js 运行环境
+        uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: "pnpm"
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build
-        run: pnpm build
+      - name: 安装项目依赖
+        run: npm ci
+      - name: 构建项目
+        run: npm run build
