chore(config): 更新路径配置和移除文档文件
移除了 src/assets/docs 目录下的 abc.md 和 abc copy.md 文件，
更新了 tsconfig.app.json 中的路径映射配置，添加了 @docs 路径别名，
同时更新了 vite.config.ts 中的插件配置格式。

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@vy/*": ["./src/*"]
+      "@vy/*": ["./src/*"],
+      "@docs/*": ["./docs/*"]
     },
     /* Linting */
     "strict": true,
