feat(build): 添加预览命令
在 package.json 中添加了 vite preview 命令，
用于本地预览构建后的应用。

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "preview": "vite preview",
     "eslint:fix": "eslint --fix",
     "prettier:write": "prettier . --write",
     "prepare": "husky"
